# Penugasan_CRUD

./: .gitignore  README.md  Requirement.txt
.history/: README_20260521222305.md  README_20260521222657.md  README_20260521222720.md
.history/backend/: .env_20260512133106  .env_20260521135058  docker-compose_20260512132723.yaml  docker-compose_20260521135003.yaml  pyproject_20260521222314.toml
.history/frontend/: README_20260521134904.md  package_20260521134826.json  package_20260521150815.json  tsconfig_20260521134826.json  tsconfig_20260521150815.json
backend/: .env  alembic.ini  docker-compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 088dba899e6d_update_event_table.py  5c45025fe182_create_initial_tables.py  add_unique_constraints.py  b67367c9a39b_create_tables.py  e78ea68f3a87_create_initial_tables.py
backend/src/: app.py
backend/src/controllers/: account.py  auth.py  event.py  registration.py  role.py  user.py
backend/src/database/: __init__.py  connection.py
backend/src/database/models/: __init__.py  account.py  event.py  log.py  registration.py  role.py  user.py
backend/src/dto/: account.py  base.py  event.py  registration.py  role.py  user.py
backend/src/middlewares/: auth.py
backend/src/repositories/: account.py  event.py  registration.py  role.py  user.py
backend/src/routes/: account.py  event.py  registration.py  role.py  user.py
backend/src/services/: account.py  auth.py  event.py  registration.py  role.py  user.py
backend/src/utils/: hash.py  seed.py
frontend/: .gitignore  package-lock.json
(+68 files in other folders)
