[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jalu",email = "nugrohojalu7@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlmodel (>=0.0.38,<0.0.39)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poe.tasks]
dev = "fastapi dev src/backend/app.py"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

